--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,21 +6,34 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    color:#636362;
+    color:#000;
 }
-ul li{
+ul li {
     list-style: inside;
 }
-h2{
+h2 {
     margin-bottom: 10px;
 }
-.container{
-    max-width: 90%;
+.container {
+    max-width: 80%;
     margin: auto;
-    background: wheat;
     padding: 2%;
 }
-.info_personal{
+.info_personal {
     display: flex;
     justify-content: space-between;
+}
+.quienSoy {
+    max-width: 85%;
+}
+.img img {
+    Clip-path: inset(30px 0px 0px 0px);
+    margin-top: -50px;
+}
+.idiomas_tecnologia{
+    display: flex;
+}
+.idiomas, .programas{
+    display: inline-block;
+    width: 45%;
 }
